2.26.5 (12-12-2025)
- Refactor: Replaces CompetenceCourseType enum references [#qubIT-Fenix-3048]

2.26.4 (22-10-2025)
- Improvement: RAIDES - List the competence courses without credits at log file [#qubIT-Fenix-7656]

2.26.3 (16-10-2025)
- Bug fix: An error occurs when generating the RAIDES report if the student's country of residence is not filled in. [#qubIT-Fenix-7639]
- Bug fix: Empty lines at XLS RAIDES report (Sheet: Personal Ingression Data) [#UCP-FENIXEDU-519]

2.26.2 (24-09-2025)
- Refactor: Remove deprecated degreeInfo and extendedDegreeInfo fields and replace them with dynamic fields [#qubIT-Fenix-6512]

2.26.1 (28-08-2025)
- Refactor: Use static RAIDES code constants [#qubIT-Fenix-7009]

2.26.0 (08-08-2025)
- Refactor: Cleans up RAIDES enums refactor [#qubIT-Fenix-7009]

2.25.1 (04-08-2025)
- Refactor: removes references of StudentCandidacy [#qubIT-Fenix-6559]

2.25.0 (29-07-2025)
- Refactor: Creates RAIDES domain object legal mappings and replaces references [#qubIT-Fenix-7009]
- Refactor: Replaces SchoolLevelTypeMappings with EducationLevelTypeMappings [#qubIT-Fenix-7009]

2.24.19 (23-07-2025)
- Refactor: Refactors SchoolLevelType, ProfessionalSituationConditionType and ProfessionType enums [#qubIT-Fenix-7009]

2.24.18 (09-07-2025)
- Refactor: Moves Placing Option from StudentCandidacy to Registration [#qubIT-Fenix-6559]

2.24.17 (12-06-2025)
- Refactor: Remove references to the execution degree of StudentCandidacy [#qubIT-Fenix-6559]

2.24.16 (24-04-2025)
- Bug fix: Fix Excel data export of RAIDES [#qubIT-Fenix-6874]
- Improvement: RAIDES - Add a warning when the completed qualification degree has the same code as registration degree code (or precedent degree code) [#UL-ISA-5580]

2.24.15 (31-03-2025)
- Bug fix: add missing labels (RAIDES) [#ISCTE-FENIXEDU-1087]
- Bug fix: PRIES salary bonus (update XSD) [#UL-FF-3543]

2.24.14 (12-03-2025)
- Improvement: Add new attributes to RAIDES log [#ISCTE-FENIXEDU-1021]

2.24.13 (27-02-2025)