@@ -1,3 +1,5 @@
+- Bug fix: Ensure read of CompetenceCourseType inside transaction [#qubIT-Fenix-3048]
+
 2.26.5 (12-12-2025)
 - Refactor: Replaces CompetenceCourseType enum references [#qubIT-Fenix-3048]
 
